syntax = "proto3";
package protos;

service TransactionExchange {
    rpc SendTransaction (Transaction) returns (TransactionResponse) {};
    rpc Validate (ValidationRequest) returns (ValidationResponse) {};
}

message Block {
    BlockHeader header                = 1;
    repeated Transaction transactions = 2;
    uint64 difficulty                 = 3;
    bytes  block_hash                 = 4;
    string data                       = 5;
    uint64 pow                        = 6;
}

message BlockHeader {
    uint64 timestamp        = 1;
    uint64 nonce            = 2;
    bytes  previous_hash    = 3;
    uint64 block_index      = 4;
    bytes  merkle_root      = 5;
}


message Transaction {
    string from_addr        = 1;
    string to_addr          = 2;
    uint32 amount           = 3;
    string additional_data  = 4;
}

message TransactionResponse {
    bool   successful = 1;
    string message    = 2;
    oneof data {
      Transaction transaction = 3;
      ValidationRequest validation_request = 4;
    }
}

message ValidationRequest {}

message ValidationResponse {}
